--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Deemed University  - Mech</p>
+            <p>Bharathidasan University - BSc. Computer science </p>
             
             
         </div>
