--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/storage/emulated/0/DCIM/MyAlbums/nisha/IMG_20250318_152254.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG_20250318_152254.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Nishanthini.R</h1>
             <p>B.sc COMPUTER SCIENCE STUDENT</p>
         </div>
