--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Untitled design_20250319_110612_0000.png" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
